Allow non UTC lastUpdateTimestamp